# ChangeLog for x11-libs/tslib
# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/x11-libs/tslib/ChangeLog,v 1.4 2008/11/09 20:51:39 solar Exp $

*tslib-1.0-r1 (09 Nov 2008)

  09 Nov 2008; <solar@gentoo.org> +tslib-1.0-r1.ebuild:
  - little bump for object renaming and making raw event types of 0 shutup

  26 Oct 2008; <solar@gentoo.org> tslib-1.0.ebuild:
  - open tslib to all remaining ~arches

  04 Jun 2008; Diego Pettenò <flameeyes@gentoo.org> tslib-1.0.ebuild:
  Use eautoreconf, not the bootstrap script.

*tslib-1.0 (11 May 2008)

  11 May 2008; <solar@gentoo.org> +metadata.xml, +tslib-1.0.ebuild:
  - initial add. We take patches from openembedded,buildroot,suse
