@@ -1,6 +1,9 @@
 # ChangeLog for x11-libs/tslib
-# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/x11-libs/tslib/ChangeLog,v 1.4 2008/11/09 20:51:39 solar Exp $
+# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/x11-libs/tslib/ChangeLog,v 1.5 2009/04/03 13:51:39 ranger Exp $
+
+  03 Apr 2009; Brent Baude <ranger@gentoo.org> tslib-1.0-r1.ebuild:
+  Marking tslib-1.0-r1 ppc stable for bug 251832
 
 *tslib-1.0-r1 (09 Nov 2008)
 
